--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,12 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>5.0.7.RELEASE</version>
 		</dependency>
-						
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>5.0.7.RELEASE</version>
+		</dependency>
+			
 	</dependencies>
 
 	<build>
