Implementando Pool de conexão com Hikari

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,18 @@ spring.servlet.multipart.max-file-size=10000KB
 spring.servlet.multipart.max-request-size=10000KB
 
 server.servlet.context-path=/cursospringrestapi
+
+#número maximo de milisegundos que um cliente aguardará por uma conexão
+spring.datasource.hikari.connection-timeout=20000
+
+#número maximo de conexao inativas mantidas pelo HikariCP em um conjunto de conexões
+spring.datasource.hikari.minimum-idle=10
+
+#número maximo de conexao que podem ser abertas
+spring.datasource.hikari.maximum-pool-size=40
+
+#tempo ocioso para conexao
+spring.datasource.hikari.idle-timeout=10000
+
+#salvado os dados automaticamente
+spring.datasource.hikari.auto-commit=true
