--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,11 @@
 		   <artifactId>jjwt</artifactId>
 		   <version>0.7.0</version>
 		</dependency>
-			
+        <dependency>
+           <groupId>com.zaxxer</groupId>
+           <artifactId>HikariCP</artifactId>
+           <version>3.3.1</version>
+        </dependency>			
 	</dependencies>
 
 	<build>
