Implementando o cache para performance

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,11 @@
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>3.3.1</version>
-        </dependency>			
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>        			
 	</dependencies>
 
 	<build>
